--- a/style.css
+++ b/style.css
@@ -41,3 +41,49 @@ h1.title {
 .book .book-body .page-wrapper .page-inner section.normal strong {
   font-weight: 500;
 }
+
+/*---Copy Button---*/
+
+.copy {
+  width: inherit;
+  background-color: #e2e2e2 ;
+  border: none;
+  border-radius: 2px;
+  float: right;
+  font-size: 60%;
+  padding: 4px 4px 4px 4px;
+}
+
+/*---Section anchors---*/
+
+.book .book-body .page-wrapper .page-inner section.normal {
+  overflow: visible !important; /*so anchor link doesn't get cut off by parent container*/
+}
+
+a.anchor {
+  margin-left: -30px;
+  padding-right: 3px;
+  display:inline-block;
+  width: 30px;
+  height: 30px;
+  visibility: hidden;
+  background-image: url(https://image.flaticon.com/icons/svg/34/34735.svg) !important;
+  background-repeat: no-repeat !important;
+  background-size: 20px 20px !important;
+  background-position: center bottom !important;
+  opacity: 0.5;
+}
+
+a.anchor:hover {
+  visibility: visible;
+}
+
+.hasAnchor:hover a.anchor {
+  visibility: visible;
+}
+
+@media (max-width: 1144px) { /* don't show anchor link on small screens */
+  .hasAnchor:hover a.anchor {
+    visibility: hidden;
+  }
+}
